--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "disaster-info-app",
+  "name": "disaster-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.13.0",
     "@types/leaflet": "^1.9.20",
+    "canvas": "^3.1.2",
     "leaflet": "^1.9.4",
     "next": "15.4.5",
-    "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0"
