--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.9.20",
+    "@types/xml2js": "^0.4.14",
     "canvas": "^3.1.2",
     "leaflet": "^1.9.4",
     "next": "15.4.5",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
