--- a/disaster-frontend/package.json
+++ b/disaster-frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.84.1",
     "@types/leaflet": "^1.9.20",
     "@types/xml2js": "^0.4.14",
     "canvas": "^3.1.2",
